wacom: Show "stand-by" page when Wacom not available

https://bugzilla.gnome.org/show_bug.cgi?id=657424